# call-center

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config.json
.github/: release-drafter.yml
.github/workflows/: build.yml  build_release.yml  release.yml  release_assets.yml  test_debug.yml  test_release.yml  verify_pr_type.yml
cmake/: Ccache.cmake  ClangTidy.cmake  Doxygen.cmake  FindPackage.cmake  IncludeWhatYouUse.cmake  Install.cmake  SetupEnv.cmake  Testing.cmake
src/: CMakeLists.txt
src/call_center/: CMakeLists.txt  call_center.cc  call_center.h  call_center_service.cpp  call_detailed_record.cc  call_detailed_record.h  call_queue.cc  call_queue.h  call_status.cc  call_status.h  configuration.cc  configuration.h  configuration_updater.cc  configuration_updater.h  journal.cc  journal.h  main.cc  main.cpp  main_sink.cc  main_sink.h  operator.cc  operator.h  operator_set.cc  operator_set.h
src/call_center/configuration/: configuration.cc  configuration.h  configuration_updater.cc  configuration_updater.h
src/call_center/core/: clock_adapter.cc  clock_adapter.h  task_manager.cc  task_manager.h  task_manager_impl.cc  task_manager_impl.h  tasks.h
src/call_center/core/containers/: concurrent_hash_map.h  concurrent_hash_set.h  queue.h
src/call_center/core/http/: http.h  http_connection.cc  http_connection.h  http_repository.cc  http_repository.h  http_server.cc  http_server.h
src/call_center/core/queueing_system/: request.cc  request.h  server.cc  server.h
src/call_center/core/queueing_system/metrics/: metric.h  queueing_system_metrics.cc  queueing_system_metrics.h  request_metrics.cc  request_metrics.h  service_metrics.cc  service_metrics.h
src/call_center/core/tasks/: task_manager.h  task_manager_impl.cc  task_manager_impl.h  tasks.h
src/call_center/core/utils/: concepts.h  date_time.h  numbers.h  uuids.cc  uuids.h
src/call_center/data/: call_repository.cc  call_repository.h  call_request_dto.cc  call_request_dto.h  call_response_dto.cc  call_response_dto.h  http.h  http_connection.cc  http_connection.h  http_repository.cc  http_repository.h  http_server.cc  http_server.h
src/call_center/include/callcenter/: call_center_service.h
src/call_center/log/: attrs.h  logger.cc  logger.h  logger_provider.cc  logger_provider.h  severity_level.cc  severity_level.h  sink.cc  sink.h
src/call_center/queueing_system/: request.cc  request.h  server.cc  server.h
src/call_center/queueing_system/metrics/: metric.h  queueing_system_metrics.cc  queueing_system_metrics.h  request_metrics.cc  request_metrics.h  service_metrics.cc  service_metrics.h
src/call_center/repository/call/: call_repository.cc  call_repository.h  call_request_dto.cc  call_request_dto.h  call_response_dto.cc  call_response_dto.h
src/call_center/repository/metrics/: metrics_repository.cc  metrics_repository.h  metrics_response_dto.cc  metrics_response_dto.h
test/unit/: CMakeLists.txt
test/unit/call_center/: CMakeLists.txt  call_center_service_test.cc  call_center_service_test.cpp  call_center_test.cc  configuration_adapter.cc  configuration_adapter.h  operator_set_test.cc  task_manager_impl_test.cc  utils.cc  utils.h
test/unit/call_center/core/queueing_system/metrics/: queueing_system_metrics_test.cc
test/unit/call_center/core/tasks/: task_manager_impl_test.cc
test/unit/call_center/fake/: clock_interface.h  fake_call_detailed_record.cc  fake_call_detailed_record.h  fake_clock.cc  fake_clock.h  fake_operator.cc  fake_operator.h  fake_service_loader.cc  fake_service_loader.h  fake_task_manager.cc  fake_task_manager.h
test/unit/call_center/mock/: mock_operator.cc  mock_operator.h
test/unit/call_center/queueing_system/metrics/: queueing_system_metrics_test.cc
